# purely-poker

./: .gitignore  CHANGELOG.md  purely-poker.cabal  test.txt
app/: Main.hs  Poker.hs  Test.hs  Testing.hs
app/Test/: Test.hs
