cabal-version:      2.4
name:               purelypoker
version:            0.1.0.0


-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ola
maintainer:         ola@esgzonex.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable purely-poker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Paths_purelypoker, Test


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , random-shuffle
                    , random
                    , multiset
                    , multiset-comb
                    , split
                    , parallel
                    , deepseq
                    , vector
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2 -threaded -rtsopts -eventlog "-with-rtsopts=-N -l -s -lf"
